--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,12 @@ before_install:
   - echo "Installing Arduino version $ARDUINO_VERSION"
   - wget http://downloads.arduino.cc/arduino-$ARDUINO_VERSION-linux64.tar.xz
   - tar -xJf arduino-$ARDUINO_VERSION-linux64.tar.xz
-  - export PATH="$PWD/arduino-$ARDUINO_VERSION:$PATH"
+  - sudo mv arduino-$ARDUINO_VERSION /usr/local/share/arduino
+  - sudo ln -s /usr/local/share/arduino/arduino /usr/local/bin/arduino
+#  - export PATH="$PWD/arduino-$ARDUINO_VERSION:$PATH"
 install:
   # Avoid having the hardware directory being picked up by Arduino
+  # TODO: Rename this directory in git
   - rm -rf hardware/
   # Add the ESP8266 board to the Board Manager (boards manager does not working on 1.6.6 - 1.6.8)
 #  - arduino --pref boardsmanager.additional.urls=http://arduino.esp8266.com/stable/package_esp8266com_index.json --save-prefs
@@ -20,8 +23,9 @@ install:
   - mkdir -p ~/.arduino15/
   - cp -av .travis_arduino_preferences.txt ~/.arduino15/preferences.txt
   # Install our ESP8266 board
-  - arduino --install-boards esp8266:esp8266 --save-prefs
+  - arduino --install-boards esp8266:esp8266
+  - arduino --board esp8266:esp8266:generic --save-prefs
   # Enable maximum warning level
-  - arduino --pref compiler.warning_level=all --save-prefs
+#  - arduino --pref compiler.warning_level=all --save-prefs
 script:
   - arduino --verify --board esp8266:esp8266:thing $PWD/adem/adem.ino
