Added debug an demo targets to platformio

--- a/platformio.ini
+++ b/platformio.ini
@@ -3,8 +3,22 @@ src_dir = adem
 lib_dir = libraries/
 upload_speed = 921600
 
-[env:esp8266]
+[env:adem]
 platform = espressif8266
 board = thing
 framework = arduino
+lib_ldf_mode = 2
+
+[env:adem-debug]
+platform = espressif8266
+board = thing
+framework = arduino
+build_flags = -DDEBUG -DDEBUG_OUTPUT=Serial
+lib_ldf_mode = 2
+
+[env:adem-demo]
+platform = espressif8266
+board = thing
+framework = arduino
+build_flags = -DDEMO
 lib_ldf_mode = 2
